2008-06-02  Atsushi Enomoto  <atsushi@ximian.com>
			Marek Safar  <marek.safar@gmail.com>
			
	A fix for bug #395542
	* cs-parser.jay: The trailing comma is allowed in anonymous type member
	declaration.
	
2008-06-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #395287
	* class.cs, modifiers.cs: Automatic properties method base modifiers checks.

2008-05-31  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #395845
	* class.cs, nullable.cs: User unary operator is allowed to have nullable and
	non-nullable parameter type.
	
2008-05-31  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Handle contructor initializer as a statement in top-level block.

2008-05-30  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Don't mix old and new corlib types when emitting corlib
	security attributes.

2008-05-24  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, expression.cs: Small IVariable refactoring.

2008-05-22  Marek Safar  <marek.safar@gmail.com>

	* assign.cs (LocalTemporary): Implemented CreateExpressionTree.

2008-05-21  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Removed redundant catch type check.

2008-05-21  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #390372
	* nullable.cs: Set correct return type.

2008-05-21  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #391062
	* typemanager.cs: Fixed crash when comparing null types.

2008-05-21  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #391871
	* cs-parser.jay: Better error handling for invalid catch type.

2008-05-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #392155
	* cs-tokenizer.cs: Fixed casting of byte and decimal expression.

2008-05-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #390666
	* ecore.cs (BetterExpressionConversion): Unwrap each Expression<T>
	expressions.

2008-05-15  Marek Safar  <marek.safar@gmail.com>

	* class.cs, expression.cs, statement.cs: Removed a hack, setting block flag
	in getter.
